# multiprocessing-workers

./: .gitignore  pyproject.toml
multiprocessing_workers/: main.py
multiprocessing_workers/libs/: job.py  logging.py  queue_objects.py  settings.py
multiprocessing_workers/template/: template1.txt
tests/: test_multiprocessing_workers.py
